[package]
name = "factory_steel"
version = "0.1.0"
authors = ["Kim Desrosiers <kimdesro@gmail.com>"]
description = "A Rust fixture replacement greatly inspired by factory_bot and factory_boy."
repository = "https://github.com/kimond/factory_steel"
keywords = ["factory_steel", "factory", "fixtures"]
categories = ["development-tools"]
license = "MIT"
readme = "README.md"

[dependencies]
fake = "1.2.1"
factory_steel_derive = {version="0.1.0", path="../factory_steel_derive"}


[badges]
travis-ci = { repository = "kimond/factory_steel" }
