[package]
name = "factory_steel_derive"
version = "0.1.0"
authors = ["Kim Desrosiers <kimdesro@gmail.com>"]
license = "MIT"

[dependencies]
syn = "0.13"
quote = "0.5"
proc-macro2 = "0.3"

[dev-dependencies]
factory_steel = {version = "0.1.0", path = "../factory_steel"}

[lib]
proc-macro = true

[[test]]
name = "tests"