[package]
name = "factory_steel_derive"
version = "0.1.0"
authors = ["Kim Desrosiers <kimdesro@gmail.com>"]
description = "You should not use this crate directly, it is internal to Factory_steel."
repository = "https://github.com/kimond/factory_steel/tree/master/factory_steel_derive"
license = "MIT"

edition = '2018'

[dependencies]
syn = "0.15"
quote = "0.6"
proc-macro2 = "0.4"

[dev-dependencies]
factory_steel = {version = "0.1.0", path = "../factory_steel"}

[lib]
proc-macro = true

[[test]]
name = "tests"